common-base/storefront/ingress-https.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: storefront-ingress-https
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: true
    nginx.ingress.kubernetes.io/proxy-buffering: on
    nginx.ingress.kubernetes.io/proxy-buffers-number: 16
    nginx.ingress.kubernetes.io/proxy-buffer-size: 64k
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/enable-cors: true
spec:
  tls:
    - hosts: 
      - '$(VC_STOREFRONT_SERVICE).$(VC_NAMESPACE).govirto.com'
      secretName: $(VC_STOREFRONT_SERVICE)-$(VC_NAMESPACE)-tls
  rules:
  - host: $(VC_STOREFRONT_SERVICE).$(VC_NAMESPACE).govirto.com
    http:
      paths:
      - backend:
          serviceName: storefront
          servicePort: 80
        path: /
